fixed container alignment bugs

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     width: 100%;
     height: auto;
+    margin-top: 64px;
 }
 
 .card {
