--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,3 @@
-.header-container {
-    
-}
-
 .header {
     display: flex;
     justify-content: space-between;
