--- a/src/components/Header/Sort/Sort.css
+++ b/src/components/Header/Sort/Sort.css
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: space-between;
     border-radius: 8px;
+    margin-top: 30px;
 }
 
 #sort-label {
