--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,5 +1,9 @@
 .Sidebar {
+    display: flex;
     min-height: 100px;
-    width: 100%;
+    margin-top: 30px;
+    align-items: flex-start;
+    flex-direction: column;
+    row-gap: 10px;
     border-radius: 8px;
 }
