--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -14,28 +14,23 @@
 
 /* Styling specific to App element. */
 .App {
-    height: 100%;
+    display: flex;
     width: 100%;
 }
 
 .main-content {
     width: 70%;
-    height: 100%;
-    margin-top: 64px;
-    margin-left: 30px;
+    margin-left: 2%;
     position: relative;
 }
 
-.sidebar {
-    position: fixed;
-    width: 22%;
-    height: 100%;
-    margin-top: 100px;
-    margin-left: 30px;
-    margin-right: 30px;
-    align-items: center;
-    flex-direction: column;
-    row-gap: 30px;
+.sidebar-container {
+    position: relative;
+    width: 24%;
+    min-width: 220px;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-top: 70px;
 }
 
 .blur {
